--- a/FormText.resx
+++ b/FormText.resx
@@ -117,102 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnStickWoman.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAAK/INwWK6QAAABl0RVh0U29m
-        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAN4SURBVHhe7ZkhbCJBFIabtGmQSCQSicQVVySiSZFI
-        6khagWtOIS4XJBJJLieQ5BQ5hUQikUgkOcX1a/KSyebf7VHe7OWyK75s+OfNwnsz8+bNcHU6nQqNFIuE
-        FIuEFIuEFIuEFIuEFPPgcDhUV6tVG/b7fU3Z5IEUY3E8Hiuj0Whcq9X2V29fHVKtVg+9Xm+edzCkGIP1
-        et1qNBrb0Ol2u72CSqVyDAOxXC476h0xkKI3OG8OEgQ+J222222j1WqtzW42m/WTNjGQoidMexv5bre7
-        YO0rO+P19fULtsyK3W5XVzaeSNGTwWAwtZEnGMomSafTWdKHGaHaPZGiJ6xpnFHTPg0SoeWF2LNAil7w
-        43GCrK/as7BZsFgsuqrdCyl6wY/HCZxR7VmwXdKXnKDavZCiF2RynCD5qfYsxuPxiL7D4XCi2r2Qoheb
-        zaaJEyRA1Z4FQaNv7O1Qil6Q9S2ZnVPh0a9er+/oRxCVjRdS9IRKD0fOWQZWC5A8/3br/CxS9IQKz2bB
-        dDodKJsQtkuzj70DgBS9wXEcgn6/P0urBkl85jx2ysYbKcbAsjowtTn5oU0mkyHOhgclPsee+oYUY6FO
-        hCFUjXlM+xApxoZAsCyenp6m19fXp5eXl69cjOQ16iFSzAumPyMfu9jJQop5wGjbzRBT/1+MPkgxD+yc
-        YMzn856yi40U86DZbG5w/K1Qeg8ABZOyi40UY0MSxGmWADWBLQWKJmUfEynGxg46lvx48pkjcNI2NlKM
-        CYcinKXiswOSnRrzqP2TSPES2M85zKTx8PDwA2epBMN+diP8+Pj4XfUD3h328UCKl8APxZE0bm5u3p/J
-        Y254XkiDd4d9PJDiJWTNgPv7+584ojI+U//29vY37c/Pz99U//9iBmRh2T6t3ucQFGuk05BiDKzwyboe
-        s+2R2yDVHgMpxsAKH+p/1W7YaTGv/wel6M0525wdkJK7RCyk6E2y8MnC/hUK64SYSNETVfh8hAXso+Xi
-        gRQ9sTL3nCnN+qfPZ/5POBcpesF6Z+QtAMl9PQv6ADuDercXUvTCEtolxL4dlqIXlLfhqN7d3f3CKZ6h
-        ntXGzbF6txdSjAUO4STPc9piIsVYlAEoA1AGoAxAGYAyAGUAygCUASgDUAagmAGw/wzU/X5WW0ykWCSk
-        WCSkWCSkWCSkWCSkWBxOV38Ai2WalnUV3UAAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnArmsDown.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAAK/INwWK6QAAABl0RVh0U29m
-        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAO6SURBVHhe7ZohjCJBEEUXh0QikQgEghDkOJAIBDgM
-        CZIEQ4Igp5BIxAkk4gSSnEIiTiBOIJFIJHKOT1JJp+/DMrtVnezOiBeY3z27VE1XdVf3vMVxnGqomCao
-        mCaomCaomCaomCaoGIrL5VLY7XYROJ/PRdbHGipacr1e85PJZF4sFs9vt3/vUigULt1udx3SGVS0Yr/f
-        N8rl8tE1OoqiHcjn81fXEdvttsX+hjZUtADGi4FwAq79PsfjsdxoNPbSb7Va9f0+2lBRGwx7efLtdnuD
-        2Gf9hNls9gN9MSpOp1OJ9dGCitoMh8OlPHk4g/XxabVaW9yDEcHataCiNohpGMOG/SOQCCUvWI4CKmqC
-        Hw8jkPVZ+zNkFGw2mzZr14CKmuDHwwgYw9qfgekS9yInsHYNqKgJMjmMQPJj7c+Yz+cT3DsajRasXQMq
-        anI4HKowAgmQtT8DTsO9ltMhFTVB1pdklmSFh/tKpdIJ98GJrI8GVNQGKz0YkiQMZC2A5Pnq1PkRqKgN
-        VngyCpbL5ZD1ccF0Kf0tZwBARQtgOAwC/X5/9Wg1iMQnxqMf66MJFa2QrA4wtFH5QVssFiMY6xZKuLYc
-        +gIVLWEVoQtWjdbD3oWKIYAjEBZS/TWbzd/YGAnx1F2oGBLJ9parvWdQMSSZAzIHZA7IHJA5IHNAih1Q
-        q9X+wAGVSuUva7eGiqFwCySAmoD1s4SKIXBLXgHXKJ1ZfyuoaA12huRs8FYL3I2/FUj3z2q1eghZD1DR
-        EhgnBVAURfF0Or0bPh6PUSLfv2M3mN1rARUtkVMi7PdhJLizAA5E8R2gMmT3a0NFKyTpIdbllMifBl0H
-        vXeGqAEVLXCTnrvN7TsAISIbJt9mS8xNev4hh+8A4DprvV533f7aUFETL+nt/AzPHODq2CJLcp6QFCpq
-        g6cuSc9vGwwGP+v1etzpdH75bXAczhS/vAMAS2jI9HjKuVzu9kv+H+7fKgn6uHmh1+ut8Ylry6fNoGII
-        5OATeQHX8i4Azgr8vpZQ0RoUPf4Tx6e8SWKd+V2oaIk7xfmrPXmXIGQoUNEKTIFy5O1Pe0LoUKCiFVjZ
-        wThMb/56QAgdClS0QIY3jHvvra+QoUBFbdz3A149+AwVClTUBEMdmxwwBpUe68MIFQpU1ATLYBiBCu9R
-        3D8iRChQUQt5RxDD/6N7fdahQEUNkOhkCLv1f1KsQ4GKGsibYRpPzjIUqPhZEOtIeJrbWggF8CUcIGiW
-        s0kT6KtQMU1QMU1QMU1QMU1QMT3Eb/8AIcPn5fq13z0AAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnArmsUp.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAAK/INwWK6QAAABl0RVh0U29m
-        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAPiSURBVHhe7ZovbGJBEMZpUkFSgyTBIJEogiSpAAei
-        gjoMCRJXXHOKnEIiTiARJ5DIJ5FIJOqCRF2Q7/bb6+Q23AeFdmaT5kHyyzu+3ddj5s3M/nu5NE0zDRWz
-        BBWzBBWzBBWzBBWzBBVjsd/vC0mSNMButyuyPtZQ0ZLD4ZAfjUbjYrG4y7n/PqRQKOy73e48pjOoaMVq
-        tapXKpVNaHSj0UhAPp8/hI5YLpct9je0oaIFMF4MhBPw/bjPZrOp1Ov1lfSbzWa94z7aUFEbhL08+U6n
-        s0Dus37C6+vrN/RFVGy32zLrowUVtRkMBlN58nAG63NMq9Va4h5EBGvXgoraIKdhDAv7U6AQSl2wjAIq
-        aoIfDyNQ9Vn7OSQKFotFh7VrQEVN8ONhBIxh7efAcIl7URNYuwZU1ASVHEag+LH2c4zH4xHuHQ6HE9au
-        ARU1Wa/XVRiBAsjazwGn4V7L4ZCKmqDqSzG7ZoaH+8rl8hb3wYmsjwZU1AYzPRhyTRrIXADF89Kh8yNQ
-        URvM8CQKptPpgPUJwXAp/S1HAEBFC2A4DAK9Xm92ajaIwifGox/rowkVrZCqDhDaWPlBm0wmQxgbLpTc
-        99Qy9AUqaoMwRv7DIBfeGBG8kQw3a0TYu9vSFPOAS1LmM1BRExgta383njvp7weOcMZhru8NbzabaZIk
-        eOq+Hf8Wp3z5USAsam5Md9K/j6v23khc5ePqA1LE65aTIEBFC6QIOkf4py8f5gBXG7x2zerxo1DRClkW
-        uwkOJkVO+t8BiJA3Rx0sQ1+gohV4mrLj4yZHPt9DB7iVoy+C+I7Rgf0NbahoCabDYVEMHQCnvDknYfda
-        QEVrwqLYbre90Y+Pj/6KzRPrbbAQKsZAiuL9/b03XK4xNkJDqBgLKYoCZoasnyVUjAWKYqlU+gXjHx4e
-        fr+3W2wBFWPy8vLyHQ7AlbVbQ8WYuOrv1/24snZrqBiTmwNuDrg54OaAmwNuDsiwA/r9/o9arZY+PT39
-        ZO3WUDEWeDkKT//u7s79klw6n8+7rJ8lVIxBuC/w/Pw8xxXfrzk+04CKMZCDT9n8kHcBYq8IqWgNDkKO
-        nziu8iZJzFSgoiXhbhBqQNgm7xLETAUqWoH1vxx5nxr2YqcCFa3A+R+Mw87wqf3+2KlARQskvC/Z9IyZ
-        ClTUJnw/4NLz/lipQEVNEOrVanUNY7AJyvowYqUCFTXB4SaM+Mg5X4xUoKIW8o4gwh9pwPq8h3UqUFED
-        FDoJ4c8cdlinAhU1kDfDNJ6cZSpQ8bMg11HwMOnROuxAKoAv4QBB86Tn2gJ6KVTMElTMElTMElTMElTM
-        DmnuD5HYCNA4T+K1AAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="btnArmsStraight.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAAK/INwWK6QAAABl0RVh0U29m
-        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAMySURBVHhe7ZohjCJBEEXBIZFIJBK1wS0OJALBOswm
-        SCSOnEIiESeQiBNIcoqcQiKRSCQSye0TlUzIB5alujd3PeKFzO9qlqqpqunZ7sL5fE4aKaaEFFNCiikh
-        xZSQYkpIMQbH47G8Xq+bcDgcKsomBlIMxel0Ko1Go0mlUjkUPv50lnK5fOz1eovYwZBiCDabTaNWq+2y
-        TjebzTWUSqVTNhCr1aqtviMEUvQG581BgsD1pc1ut6s1Go2N2c3n8/6lTQik6Alpb3e+0+ksqX1lZ4zH
-        4x/YkhX7/b6qbDyRoieDwWBmd55gKJtL2u32ijlkhBr3RIqeUNM4o9L+GjRC6wuhs0CKXvDjcYKur8Zv
-        YVmwXC47atwLKXrBj8cJnFHjt+BxyVx6ghr3Qope0Mlxguanxm8xmUxGzB0Oh1M17oUUvdhut3WcoAGq
-        8VsQNOaGfhxK0Qu6vjWzR1Z4zKtWq3vmEURl44UUPWGlhyOPlIGtBWien310fhUpesIKz7JgNpsNlE0W
-        HpdmH/oJAFL0BsdxCPr9/vzaapDGZ85jp2y8kWIIrKsDqc2bH9p0Oh3ibPZFievQqW9IMRTqjTALq8YY
-        aZ9FiqEhEJSFvf21Wq3f/GMk1l3PIsVYWLcPvdq7hRRjkQcgD0AegDwAeQD+9wDwfMdBxevr6x8CwKca
-        Z676Tk+k6AmO4ORXYK76Tk+k6EnyGXALnIx1p68hxVjkAcgDkAcgD0AegDwACQfg/f3958vLy7nb7f5S
-        4zGQYgxY5XH3i8Xix68onBeLRU/ZhUaKoWGbzA5Kvb29LfjkOvYBKZBiaGzjk20zru0sAHsFl7ahkWJI
-        2Ai5vON82kmS2KUgxVBk9/0u3/TsLEHsUpBiCLJb3tcee99RClIMAft9OMdu0LUdoO8oBSl6Y+mNc/dO
-        fcUuBSl6kj0f8NmNz5ilIEUvSPV6vb7FGQ5MKhtFzFKQohec8MKJR06JGrFKQYoe2BlB0p8yUDb3iFEK
-        UnwWGp2l8DPH3GKUghSfxU6Gedy50KUgxWeg1ml4LHruHY3/LJQC/BMBMLych0cb6CNIMSWkmBJSTAkp
-        poQU0+Fc+AtWXQpF4204bQAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <metadata name="ColorDB.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="colourDB.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <metadata name="bindingSource1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>195, 17</value>
-  </metadata>
-  <metadata name="saveDB.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>464, 17</value>
-  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAAAAAAAEAIAB3DAAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgEAAAA9ntg7QAAAAFv
